customer: persistence with Panache
