# pta-customer/src/main/java/ch/obya/pta/customer/infrastructure/web/CustomerResource.java
@@ -1,7 +1,7 @@
 package ch.obya.pta.customer.infrastructure.web;
 
 import ch.obya.pta.common.domain.vo.Name;
-import ch.obya.pta.common.util.search.FindCriteria;
+import ch.obya.pta.common.util.search.AttributeFilter;
 import ch.obya.pta.customer.application.CustomerService;
 import ch.obya.pta.customer.domain.repository.CustomerRepository;
 import ch.obya.pta.customer.domain.vo.*;
@@ -10,11 +10,15 @@ import io.smallrye.mutiny.Uni;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.*;
 import org.jboss.resteasy.reactive.ResponseStatus;
+import org.jboss.resteasy.reactive.RestPath;
 import org.jboss.resteasy.reactive.RestQuery;
 import org.zalando.problem.Problem;
 import org.zalando.problem.Status;
 
 import java.time.LocalDate;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Produces("application/problem+json")
 @Path("/customers")
@@ -33,102 +37,125 @@ public class CustomerResource {
                     input.salutation(),
                     input.firstName(),
                     input.lastName(),
-                    input.birthDate(),
+                    input.birth(),
                     input.gender()
                 ),
-                input.deliveryAddress(),
-                input.billingAddress(),
-                input.emailAddress(),
-                input.phoneNumber(),
-                input.notes());
+                input.delivery(),
+                input.billing(),
+                input.email(),
+                input.phone(),
+                input.notes())
+                .onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 
     @ResponseStatus(204)
     @PUT
     @Path("/{id}")
-    public Uni<Void> modify(CustomerId id, CustomerDto input) {
+    public Uni<Void> replace(@RestPath CustomerId id, CustomerDto input) {
         return service.modify(id, customer -> customer
             .rename(input.firstName(), input.lastName())
-            .redefine(input.birthDate(), input.gender())
-            .reconnect(input.emailAddress(), input.phoneNumber())
-            .relocate(input.deliveryAddress(), input.billingAddress())
-            .annotate(input.notes()));
+            .redefine(input.birth(), input.gender())
+            .reconnect(input.email(), input.phone())
+            .relocate(input.delivery(), input.billing())
+            .annotate(input.notes()))
+                .onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 
     @ResponseStatus(204)
     @PATCH
     @Path("/{id}")
-    public Uni<Void> modify(CustomerId id,
+    public Uni<Void> update(@RestPath CustomerId id,
                             @RestQuery Name firstname, @RestQuery Name lastname,
-                            @RestQuery Person.BirthDate birthdate, @RestQuery Person.Gender gender,
+                            @RestQuery Person.Birth birth, @RestQuery Person.Gender gender,
                             @RestQuery EmailAddress email, @RestQuery PhoneNumber phone,
                             @RestQuery PhysicalAddress delivery, @RestQuery PhysicalAddress billing,
                             @RestQuery String notes) {
 
         return service.modify(id, customer -> {
             if (firstname != null || lastname != null) customer.rename(firstname, lastname);
-            if (birthdate != null || gender != null) customer.redefine(birthdate, gender);
+            if (birth != null || gender != null) customer.redefine(birth, gender);
             if (email != null || phone != null) customer.reconnect(email, phone);
             if (delivery != null || billing != null) customer.relocate(delivery, billing);
             if (notes != null) customer.annotate(notes);
-        });
+        }).onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 
     @ResponseStatus(204)
-    @PUT
+    @PATCH
     @Path("/{id}/naming")
-    public Uni<Void> rename(CustomerId id, @RestQuery Name firstname, @RestQuery Name lastname) {
-        return service.modify(id, customer -> customer.rename(firstname, lastname));
+    public Uni<Void> rename(@RestPath CustomerId id, @RestQuery Name firstname, @RestQuery Name lastname) {
+        return service.modify(id, customer -> customer.rename(firstname, lastname))
+                .onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 
     @ResponseStatus(204)
-    @PUT
+    @PATCH
     @Path("/{id}/definition")
-    public Uni<Void> redefine(CustomerId id, @RestQuery Person.BirthDate birthdate, @RestQuery Person.Gender gender) {
-        return service.modify(id, customer -> customer.redefine(birthdate, gender));
+    public Uni<Void> redefine(@RestPath CustomerId id, @RestQuery Person.Birth birth, @RestQuery Person.Gender gender) {
+        return service.modify(id, customer -> customer.redefine(birth, gender))
+                .onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 
     @ResponseStatus(204)
-    @PUT
+    @PATCH
     @Path("/{id}/connection")
-    public Uni<Void> reconnect(CustomerId id, @RestQuery EmailAddress email, @RestQuery PhoneNumber phone) {
-        return service.modify(id, customer -> customer.reconnect(email, phone));
+    public Uni<Void> reconnect(@RestPath CustomerId id, @RestQuery EmailAddress email, @RestQuery PhoneNumber phone) {
+        return service.modify(id, customer -> customer.reconnect(email, phone))
+                .onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 
     @ResponseStatus(204)
-    @PUT
+    @PATCH
     @Path("/{id}/location")
-    public Uni<Void> relocate(CustomerId id, @RestQuery PhysicalAddress delivery, @RestQuery PhysicalAddress billing) {
-        return service.modify(id, customer -> customer.relocate(delivery, billing));
+    public Uni<Void> relocate(@RestPath CustomerId id, @RestQuery PhysicalAddress delivery, @RestQuery PhysicalAddress billing) {
+        return service.modify(id, customer -> customer.relocate(delivery, billing))
+                .onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 
     @GET
     @Path("/{id}")
-    public Uni<CustomerDto> findOne(CustomerId id) {
+    public Uni<CustomerDto> get(@RestPath CustomerId id) {
         return service.findOne(id)
                 .onFailure().transform(f -> Problem.valueOf(Status.NOT_FOUND, f.getMessage()))
                 .map(CustomerDto::from);
     }
 
     @GET
-    public Multi<CustomerDto> findByCriteria(@RestQuery String filter) {
-        return repository.findByCriteria(filter.isEmpty() ? FindCriteria.empty() : FindCriteria.from(filter))
-                .map(CustomerDto::from);
+    public Uni<List<CustomerDto>> search(@RestQuery List<String> firstname,
+                                         @RestQuery List<String> lastname,
+                                         @RestQuery List<String> birth,
+                                         @RestQuery List<String> gender,
+                                         @RestQuery List<String> email,
+                                         @RestQuery List<String> phone) {
+
+        Map<String, List<AttributeFilter>> criteria = new HashMap<>();
+        if (!firstname.isEmpty()) criteria.put("firstName", AttributeFilter.from(firstname, Name::new));
+        if (!lastname.isEmpty()) criteria.put("lastName", AttributeFilter.from(lastname, Name::new));
+        if (!birth.isEmpty()) criteria.put("birth", AttributeFilter.from(birth, Person.Birth::fromISO));
+        if (!gender.isEmpty()) criteria.put("gender", AttributeFilter.from(gender, Person.Gender::valueOf));
+        if (!email.isEmpty()) criteria.put("email", AttributeFilter.from(email, EmailAddress::new));
+        if (!phone.isEmpty()) criteria.put("phone", AttributeFilter.from(phone, PhoneNumber::new));
+
+        return repository.findByCriteria(criteria)
+                .map(l -> l.stream().map(CustomerDto::from).toList())
+                .onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 
     @GET
     @Path("/{id}/subscriptions")
-    public Multi<SubscriptionDto> validSubscriptionsOf(CustomerId id, @RestQuery LocalDate at) {
+    public Multi<SubscriptionDto> validSubscriptionsOf(@RestPath CustomerId id, @RestQuery LocalDate at) {
         return service.findOne(id)
                 .onFailure().transform(f -> Problem.valueOf(Status.NOT_FOUND, f.getMessage()))
                 .onItem().transformToMulti(s -> Multi.createFrom().iterable(s.subscriptionsAt(at)))
-                .map(SubscriptionDto::from);
+                .map(SubscriptionDto::from)
+                .onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 
     @ResponseStatus(204)
     @DELETE
     @Path("/{id}")
-    public Uni<Void> remove(CustomerId id, @RestQuery Boolean force) {
-        return service.remove(id, force != null && force);
+    public Uni<Void> remove(@RestPath CustomerId id, @RestQuery Boolean force) {
+        return service.remove(id, force != null && force)
+                .onFailure().transform(t -> Problem.valueOf(Status.BAD_REQUEST, t.getMessage()));
     }
 }
